@@ -1,5 +1,8 @@
 2003-01-07  Junichi Uekawa  <dancer@debian.org>
 
+	* Documentation/pbuilder-doc.xml (PBUILDER_UML_IMAGE): update notes
+	on parallel-invocation of pbuilder-uml
+
 	* Documentation/pbuilder-doc.xsl: stylesheet
 
 	* Documentation/Makefile (%.html): build rules updated thusly.
